waste-sim: fixed percentages shifting inputs in sims :bugs:

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12632,6 +12632,10 @@ input::placeholder {
   color: var(--dark-color);
 }
 
+.text-shrink {
+  font-stretch: ultra-condensed;
+}
+
 .w-33 {
   width: 33%;
 }
